# fbpyutils-ai

./: .coveragerc  .gitignore  .roomodes  AGENTS.md  CLAUDE.md  DOC.md  Makefile  PLAN.md  PLAN_002_CENTRALIZE_HTTP_RETRY.md  PLAN_004_REFACTOR_FIRECRAWL_TOOL.md  PLAN_005_CREATE_UI_MARIMO.md  PLAN_006_RELEASE_V0.1.1.md  PLAN_007_RELEASE_V0.1.2_REMOVE_MCP.md  PLAN_CENTRALIZE_HTTP_RETRY.md  PLAN_REFACTOR_FIRECRAWL_TOOL.md  PLAN_REFACTOR_HTTP_CLIENTS.md  PLAN_UPDATE_FIRECRAWL_SCRAPE_V1.md  PLAN_UPDATE_FIRECRAWL_V1.md  README.md  TODO.md  TOOLS.md  TREE.md  pyproject.toml  pytest.ini
fbpyutils_ai/: __init__.py  logging.py  main.py
fbpyutils_ai/janus/: model.py
fbpyutils_ai/servers/: mcp_scrape.py  mcp_scrape_server.py  mcp_search.py  mcp_search_server.py  mcp_search_tools.py  mcp_server.py  mcp_servers.py
fbpyutils_ai/tools/: __init__.py  crawl.py  document.py  embedding.py  finance.py  http.py  llm.py  pdf.py  scrape.py  search.py  utils.py
fbpyutils_ai/tools/browseruse/: __init__.py  update_webui_src.sh
fbpyutils_ai/tools/llm/: __init__.py  _base.py  _completion.py  _embedding.py  _get_model_details.py  _introspection.py  _list_models.py  _utils.py  _vision.py  utils.py
fbpyutils_ai/tools/llm/litellm/: __init__.py  _describe_image.py  _generate_embeddings.py  _generate_tokens.py  _get_model_details.py  completions.py  constants.py  embeddings.py  image.py  info.py  model.py  model_details.py  text.py
fbpyutils_ai/tools/llm/resources/: llm_endpoints.md  llm_introspection_prompt.md  llm_introspection_validation_schema.json  llm_providers.md
fbpyutils_ai/tools/resources/: llm_introspection_prompt.md
fbpyutils_ai/tools/ui/: search.marimo.py
fbpyutils_ai/tools/ui/marimo/: app.search_tool.py
fbpyutils_ai/ui/marimo/: __init__.py  app.llm_tool.py  app.py  app.search_tool.py  components.py  styles.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md
memory_bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
specs/: FIRECRAWL.md  FIRECRAWL_batch-scrape-get-errors.md  FIRECRAWL_batch-scrape-get.md  FIRECRAWL_batch-scrape.md  FIRECRAWL_crawl-delete.md  FIRECRAWL_crawl-get-errors.md  FIRECRAWL_crawl-get.md  FIRECRAWL_crawl-post.md  FIRECRAWL_crawl.md  FIRECRAWL_extract-get.md  FIRECRAWL_extract.md  FIRECRAWL_map.md  FIRECRAWL_scrape.md  FIRECRAWL_search.md  FIRECRAWL_status.md  SELF_HOST.md  SELF_HOST_UNSUPPORTED_PARAMS.md  ai_call_examples.md  ai_introspection_prompt.md  ai_introspection_validation_schema.json  ai_llm_endpoints.md
tests/: __init__.py
tests/servers/: test_mcp_scrape_server.py  test_mcp_search_server.py
tests/tools/: __init__.py  test_crawl.py  test_embedding_chroma_integration.py  test_embedding_pgvector_integration.py  test_embedding_pinecone_integration.py  test_http.py  test_http_requests_manager.py  test_llm.py  test_llm_openai_integration.py  test_search.py  test_tools.py
tests/tools/crawl/: test_batch_scrape.py  test_cancel_crawl.py  test_crawl.py  test_extract.py  test_get_batch_scrape_errors.py  test_get_batch_scrape_status.py  test_get_crawl_errors.py  test_get_crawl_status.py  test_get_extract_status.py  test_map.py  test_scrape.py  test_search.py
tests/tools/http/: test_basic_header.py  test_http.py  test_http_requests_manager.py
tests/tools/llm/: __init__.py  conftest.py  test_completion.py  test_embedding.py  test_get_api_model_response.py  test_get_llm_model.py  test_get_llm_resources.py  test_init.py  test_introspection.py  test_llm.py  test_sanitize_model_details.py  test_utils.py  test_vision.py
tests/tools/llm/introspection/: __init__.py  common.py  conftest.py  test_get_model_details.py  test_list_models.py
tests/tools/scrape/: test_scrape.py  test_search.py
tests_integration/: test_embedding_pgvector_integration.py  test_embedding_pinecone_integration.py  test_llm_openai_integration.py  test_scrape_server_integration.py  test_search_server_integration.py
