[project]
name = "fbpyutils_ai"
version = "0.1.0"
description = "Francisco Bispo's Utils for AI"
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@franciscobispo.net" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "mcp[cli]>=1.2.1",
    "requests",
    "python-dotenv",
    "tenacity>=9.0.0",
    "chromadb>=0.6.3",
    "yfinance>=0.2.54",
    "docling>=2.24.0",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "nbformat>=5.10.4",
    "pyperclip>=1.9.0",
    "httpx>=0.28.1",
]

[tool.hatch.envs.default.dependencies]
pytest = ""
pytest-cov = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo[sql]>=0.11.8",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "rich>=13.9.4",
]
