[project]
name = "fbpyutils_ai"
version = "0.1.0"
description = "Francisco Bispo's Utils for AI"
authors = [
    { name = "Francisco C J Bispo", email = "fcjbispo@franciscobispo.net" },
]
requires-python = ">=3.11,<=4"
dependencies = [
    "mcp[cli]>=1.2.1",
    "requests",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "chromadb>=0.6.3",
    "docling>=2.24.0",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "nbformat>=5.10.4",
    "pyperclip>=1.9.0",
    "httpx>=0.28.1",
    "tiktoken>=0.9.0",
    "psycopg>=3.2.5",
    "pgvector>=0.3.6",
    "pinecone>=6.0.1",
    "duckdb>=1.2.0",
    "langchain>=0.0.123",
    "nest-asyncio>=1.5.0",
    "browser-use==0.1.40",
    "langchain-core>=0.1.17",
    "langchain-anthropic>=0.1.1",
    "langchain-mistralai>=0.2.4",
    "langchain-google-genai>=2.0.8",
    "langchain-ollama>=0.1.1",
    "langchain-openai>=0.1.5",
    "json-repair>=0.3.0",
    "MainContentExtractor>=0.0.4",
    "uuid>=1.30",
    "playwright>=1.40.0",
    "pandas>=2.2.3",
    "psycopg-binary>=3.2.6",
]

[tool.hatch.envs.default.dependencies]
pytest = ""
pytest-cov = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo[sql]>=0.11.8",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "rich>=13.9.4",
]
